crates/test-files/fixtures/compile_errors/revert_sto_error_no_copy.fe
struct MyError:
    pass

contract Foo:
    my_error: MyError

    pub def bar():
        revert self.my_error